# nbin_golf

./: .gitignore  LICENSE.txt  README.md  build.cmd  publish.cmd  pyproject.toml  test1.cmd  test2.bat  test3.bat
src/nbin_golf/: Mutual Fund File Template.xlsx  TestOrders.xlsx  __init__.py  croesus_to_nbin_tradelist.py
src/nbin_golf/test_orders/: 2021-07-06-161838.xlsx  GeneratedOrders2021-07-06-161833.xlsx
